--- a/app/templates/knowledgebase/channel.html
+++ b/app/templates/knowledgebase/channel.html
@@ -3,30 +3,31 @@
 
 {% block content %}
 <!-- Code for Module Cards to dim and show text-->
+<div class="custom-80percent-width" style="margin-left: auto; margin-right: auto">
+	<h3 class="ui header centered" style="margin-bottom:0px; color:teal">{{channel_name.upper()}}</h3>
 
-<h3 class="ui header centered" style="margin-bottom:0px; color:teal">{{channel_name.upper()}}</h3>
+	{% if questions.all()|length > 0 %}
 
-{% if questions.all()|length > 0 %}
+		<p class="ui header">Newest</p>
+	  {% for question in questions %}
+	    <div class="column">
+	      {{qc.question_card(question)}}
+	    </div>
+	  {% endfor %}
 
-	<p class="ui header">Newest</p>
-  {% for question in questions %}
-    <div class="column">
-      {{qc.question_card(question)}}
-    </div>
-  {% endfor %}
+		<p class="ui header">Highly Voted</p>
+	  {% for question in questions %}
+	    <div class="column">
+	      {{qc.question_card(question)}}
+	    </div>
+	  {% endfor %}
 
-	<p class="ui header">Highly Voted</p>
-  {% for question in questions %}
-    <div class="column">
-      {{qc.question_card(question)}}
-    </div>
-  {% endfor %}
-
-{% else %}
-	<div class="text" align="center">
-    <h3 class="ui header" style="margin-top:10px; color:teal"> No questions for this module yet </h3>
-    <p style="color: teal"> Be the first to ask a question! Head over to the our Telegram bot by searching @NUSQuestionsBot!</p>
-	</div>
-{% endif %}
+	{% else %}
+		<div class="text" align="center">
+	    <h3 class="ui header" style="margin-top:10px; color:teal"> No questions for this module yet </h3>
+	    <p style="color: teal"> Be the first to ask a question! Head over to the our Telegram bot by searching @NUSQuestionsBot!</p>
+		</div>
+	{% endif %}
+</div>
 
 {% endblock %}
