--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -99,7 +99,7 @@
                         Botmother On Github
                     </div>
                     <div class="item">
-                        <a href="https://github.com/frizensami/botmother"><i class="github icon"></i></a>
+                        <a href="https://github.com/yewsiang/botmother"><i class="github icon"></i></a>
                     <!-- Find theme at Flask-Boilerplate -->
                     </div>
                 </div>
