--- a/app/templates/security/_macros.html
+++ b/app/templates/security/_macros.html
@@ -26,7 +26,7 @@
   </p>
 {% endmacro %}
 
-{% macro render_reply_field(field) %}
+{% macro render_field(field) %}
   <p>{{ field(**kwargs)|safe }}</p>
 {% endmacro %}
 
