--- a/app/templates/knowledgebase/question.html
+++ b/app/templates/knowledgebase/question.html
@@ -112,6 +112,16 @@ function vote_answer_down(answer_id) {
       {% endif %}
 
 {% else %}
+
+      {% if current_user.is_authenticated %}
+        <form method="POST" class="ui reply form">
+          {{ form.hidden_tag() }}
+          {{ render_reply_field_with_errors(form.reply, class='custom-reply-form') }}
+          {{ render_reply_field(form.submit, class='ui circular green small custom-centered submit button') }}
+        </form>
+      {% endif %}
+
+
     <div class="text" align="center">
       <h3 class="ui header" style="color: teal"> No answers for this question yet</h3>
       <p style="color: teal"> Be the first one to answer the question and earn bonus points ^^!</p>
